cabal-version:       >=1.10

name:               hax 
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license: MIT
author:              Heritier Kinke
maintainer:          heritier.kinke@yandex.com
-- copyright:
-- category:
build-type:          Simple

library
  exposed-modules: Hax 
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14
  hs-source-dirs: lib
  default-language:    Haskell2010
